update eslintrc & package.json

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lemoncode",
     "master",
     "webpack",
-    "exercises"
+    "exercise"
   ],
   "author": "Alicia Guardeño <alicia.guardenoalbertos@gmail.com> (https://github.com/firenz)",
   "license": "MIT",
