--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Basic project with webpack configured as an exercise for the Lemoncode Master",
   "main": "index.html",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open --config dev.webpack.config.js",
+    "start": "rimraf dist && webpack-dev-server --mode development --open --config dev.webpack.config.js",
     "build:dev": "rimraf dist && webpack --mode development --config dev.webpack.config.js",
     "build:prod": "rimraf dist && webpack --mode production --config prod.webpack.config.js",
     "build:perf": "rimraf dist && webpack --mode development --config perf.webpack.config.js",
